tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_wrong_parameter2/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Parameter #2 of method `default` must be of type Field, not Foo
   ┌─ src/main.nr:12:33
   │
12 │         fn default(x: Field, y: Foo) -> Self {
   │                                 ---
   │

Aborting due to 1 previous error
